# Generals-ML

./: README.md
generals/: README.md  pyproject.toml
generals/src/generals/core/: environment.py
